<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.pmaslak.listaksiazek.ApplicationInfo">


    <TextView
        android:text="@string/text_author"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:textSize="27dp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/text_description"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:textSize="16dp"
        android:layout_height="wrap_content" />


    <TextView
        android:text="@string/text_copyright"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:layout_height="wrap_content" />



</RelativeLayout>
